# sentiric-tts-vibe-service

./: .dockerignore  .gitignore  DEMO.md  Dockerfile  Makefile  README.md  TASKS.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: main.py
app/api/: tts.py
app/core/: config.py  logging.py  tts_engine.py
app/models/: configuration_vibevoice.py  modeling_vibevoice.py  tokenization_vibevoice.py  vocab.json
app/static/: index.html
